# go-ssz

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  bitfield.go  bytes.go  config.go  decode.go  decode_test.go  deep_equal.go  deep_equal_test.go  deps.bzl  determine_size.go  doc.go  encode.go  encode_decode_test.go  encode_test.go  example_and_test.go  example_encode_test.go  fuzz.go  go-ssz.test  hash.go  hash_cache.go  hash_cache_test.go  hash_test.go  hash_tree_root.go  hash_tree_root_test.go  helpers.go  helpers_test.go  marshal.go  marshal_test.go  marshal_unmarshal_test.go  nogo_config.json  proto.pb.go  round_trip_test.go  sample.txt  signing_root.go  signing_root_test.go  size.go  (+9 more)
.ijwb/: .bazelproject
.well-known/: security.txt
examples/: BUILD.bazel  example_and_test.go  example_encode_test.go
experiment/: BUILD.bazel  exp.go  exp_test.go  genesis.ssz  main.go  main_test.go
experiment/beacon/p2p/v1/: BUILD.bazel  types.pb.go
experiment/eth/v1alpha1/: BUILD.bazel
spectests/: BUILD.bazel  bench_test.go  generic_test.go  generic_types.go  mainnet_test.go  mainnet_types.go  minimal_test.go  minimal_types.go  ssz_generic.yaml.go  ssz_mainnet.yaml.go  ssz_minimal.yaml.go  ssz_minimal_one_formatted.yaml  ssz_minimal_test.go  ssz_minimal_test.yaml.go  ssz_spec_bench_test.go  ssz_spec_test.go
spectests/yaml/: ssz_bench_block.yaml  ssz_single_block.yaml  ssz_single_state.yaml
types/: BUILD.bazel  array_basic.go  array_basic_test.go  array_composite.go  array_roots.go  array_roots_test.go  basic.go  bitlist.go  determine_size.go  factory.go  helpers.go  helpers_test.go  slice_basic.go  slice_composite.go  string.go  struct.go  struct_test.go
