load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test", "nogo")
load("@io_kubernetes_build//defs:run_in_workspace.bzl", "workspace_binary")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/prysmaticlabs/go-ssz
gazelle(
    name = "gazelle",
    prefix = "github.com/prysmaticlabs/go-ssz",
)

# Go build analysis.
nogo(
    name = "nogo",
    deps = [
        "@org_golang_x_tools//go/analysis/passes/unsafeptr:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/unreachable:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/unmarshal:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/tests:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/structtag:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/stdmethods:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/shift:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/printf:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/pkgfact:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/nilness:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/nilfunc:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/lostcancel:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/loopclosure:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/httpresponse:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/findcall:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/deepequalerrors:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/ctrlflow:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/copylock:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/cgocall:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/buildtag:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/buildssa:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/bools:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/atomicalign:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/atomic:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/assign:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/inspect:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/asmdecl:go_tool_library",
    ],
    visibility = ["//visibility:public"],
    config = "nogo_config.json",
)

workspace_binary(
    name = "golint",
    cmd = "@com_github_golang_lint//golint",
)

go_library(
    name = "go_default_library",
    srcs = [
        "bitfield.go",
        "deep_equal.go",
        "determine_size.go",
        "doc.go",
        "hash_cache.go",
        "hash_tree_root.go",
        "helpers.go",
        "marshal.go",
        "signing_root.go",
        "ssz_utils_cache.go",
        "struct_utils.go",
        "unmarshal.go",
    ],
    importpath = "github.com/prysmaticlabs/go-ssz",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_karlseguin_ccache//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "hash_cache_test.go",
        "hash_tree_root_test.go",
        "helpers_test.go",
        "marshal_unmarshal_test.go",
        "signing_root_test.go",
        "struct_utils_test.go",
    ],
    embed = [":go_default_library"],
)
