load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["exp.go"],
    importpath = "github.com/prysmaticlabs/go-ssz/experiment",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_minio_sha256_simd//:go_default_library",
        "@com_github_protolambda_zssz//htr:go_default_library",
        "@com_github_protolambda_zssz//merkle:go_default_library",
        "@com_github_prysmaticlabs_go_bitfield//:go_default_library",
        "@com_github_prysmaticlabs_prysm//proto/beacon/p2p/v1:go_default_library",
        "@com_github_prysmaticlabs_prysm//proto/eth/v1alpha1:go_default_library",
        "@com_github_prysmaticlabs_prysm//shared/bytesutil:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["exp_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//:go_default_library",
        "//types:go_default_library",
        "@com_github_prysmaticlabs_prysm//proto/beacon/p2p/v1:go_default_library",
    ],
)
