load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "attestation.pb.go",
        "beacon_block.pb.go",
        "validator.pb.go",
    ],
    importpath = "github.com/prysmaticlabs/go-ssz/experiment/eth/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gogo_protobuf//gogoproto:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
        "@com_github_prysmaticlabs_go_bitfield//:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
