load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["types.pb.go"],
    importpath = "github.com/prysmaticlabs/go-ssz/experiment/beacon/p2p/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//experiment/eth/v1alpha1:go_default_library",
        "@com_github_gogo_protobuf//gogoproto:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_prysmaticlabs_go_bitfield//:go_default_library",
    ],
)
